--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "type": "module",
   "main": "index.js",
+  "engines": {
+    "node": ">=NODE_JS_VERSION"
+},
   "scripts": {
     "start": "nodemon index"
   },
