--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "engines": {
-    "node": ">=NODE_JS_VERSION"
+    "node": "v18.15.0"
 },
   "scripts": {
     "start": "nodemon index"
